--- a/css/content.css
+++ b/css/content.css
@@ -29,7 +29,7 @@ h1{
     background: rgb(255, 247, 209);
 }
 
-h1 + hr + p + p{
+p{
     margin-top: 8px;
     color: rgba(0, 0, 0, 0.4);
     font-size: 22px;
