--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,6 @@
 nav{
     background: rgb(223, 223, 223);
-    border:rgb(125, 8, 47);
+    border: 1px solid rgb(125, 8, 47);
     /* border - обводка */
     width: 300px;
     /* ширина навигационного меню (списка) */
